dark mode & fixes

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,7 @@
  *= require_self
  */
 
-turbo-frame {
-    display: block;
-    border: 1px solid blue;
-}
+/*turbo-frame {*/
+/*    display: block;*/
+/*    border: 1px solid blue;*/
+/*}*/
